# helpfulGenie_openai

./: .gitignore  Dockerfile  README.md  architecture.tldr  docker-compose-flask.yml  pyproject.toml  run.py
app/: __init__.py
app/main/: openai_api.py  routes.py  utils.py
config/: config.py  development.py  production.py
